--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-python-telegram-bot>=20.0
-guessit
-hachoir
-requests
-motor
-Flask
-speedtest-cli
-fastapi
-uvicorn
-aiohttp
+python-telegram-bot
 pyrogram
-TgCrypto
+tgcrypto
+motor
+pymongo
+aiohttp
+aiohttp_jinja2
+Jinja2
+requests
+hachoir
+guessit
+dnspython
+speedtest-cli
